--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@ body, html {
                                                           /*2. 이미지 수정(가로 이미지 사용) */
 
 .bgimg-1 {
-    background-image: url("https://www.artinsight.co.kr/data/tmp/1908/1501cf89202c25ce439949ffd767c3dd_IUDfUfz6jJVJ.jpg");
+    background-image: url("https://i.pinimg.com/564x/61/7a/03/617a032c91678c37343209bb6bef2f6d.jpg");
     min-height: 100%;
 }
 
                                                          /*2. 이미지 수정(가로 이미지 사용) */
 .bgimg-2 {
-    background-image: url("https://lh3.googleusercontent.com/proxy/FHc3HJoYwmvllp9g38ClTd63B6-p7WbvhJ5_6o4i3mG2Zbh6QBAYYkO-k9Vcfh-hFIeT_dOMR_SRRtfh-poCTaUG2KBiKB3JycTisoAr-rs9TNF3lYdIpp5nPImNxwAdqfMX5Wubf6eo9hc9z_3YZHun5GhDXlKx4yRlPN0yt2wFM3Jw8HSC0P45lw");
+    background-image: url("https://i.pinimg.com/564x/12/89/81/128981466696ec10b9a068e8591ec72f.jpg");
     min-height: 400px;
 }
 
                                                          /*2. 이미지 수정(가로 이미지 사용) */
 .bgimg-3 {
-    background-image: url("https://t1.daumcdn.net/cfile/tistory/990485345F3B74071A");
+    background-image: url("https://i.pinimg.com/564x/df/ef/32/dfef32fc7c50259de8e7b6a92935f818.jpg");
     min-height: 400px;
 }
 
@@ -85,7 +85,7 @@ body, html {
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-      미림 마이스터고 <span class="w3-hide-small">HomePage 제작</span> 체험 </span>
+       <span class="w3-hide-small"></span>𝓂𝒾𝓃𝓈ℯℴ</span>
   </div>
 </div>
 
@@ -95,16 +95,17 @@ body, html {
   <p class="w3-center"><em>Nice to meet you</em></p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>김민서</b></p><br><!-- 6. 프로필 이미지 -->
-      <img src="https://ww.namu.la/s/2c67c68771cfdc9c5c9b7c3ac26719c4fb3f082c492ac34dd94a9fd1127ac7d0da7e85f918e03c35f06557911341d05113d85b9259315cd807082c05ff86dfd1e535baa1cef03227ea4200991c82ed6fbe1e76b72b598c4588ac7e52dc82619d4ca2d5f918acc41b768902880ce9f90e"
+      <p><b><i class="fa fa-user w3-margin-right">김민서</i></b></p><br><!-- 6. 프로필 이미지 -->
+      <img src="https://i.pinimg.com/564x/9e/05/71/9e0571d6ee7b9345a446e6af36dc12b2.jpg"
       class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
                                                                        <!-- 7. 자기소개  -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>제 이름은 이형섭 입니다. </p>
-        <p>미림마이스터고에서 프로그래밍을 가르치고 있습니다.</p>
+        <p>제 이름은 김민서 입니다. </p>
+        <p> :¨·.·¨:
+          `·..➭  </p>
     </div>
   </div>
                                                                        <!-- 8. 그래프 수정 -->
